# GitPrompt

./: .gitignore  CMakeLists.txt  Config.h  Config.h.in  GitClient.cpp  GitClient.h  GitPromptApp.cpp  GitPromptApp.h  GitPromptApp.py  Main.cpp  Main.h  PS1.sh  README.md  TODO.md  ToDo.md  auto-build.sh  eclipse_gcc.sh  install_dependencies.py
Python/: GitPromptApp.py
